# today

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  castle.code-workspace  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  helpers.py  main.py  pyproject.toml
backend/castle/: advice.py  config.py  github.py  main.py  poe.py  properties.py  scenes.py
backend/castle/db/: db.py
backend/today/: config.py  github.py  lobsters.py  main.py  tasks.py
backend/today/db/: db.py  schema.sql
frontend/: .dockerignore  .env.sample  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/living-worlds/: bitmap.js  index.html  main.js  palette.js  scenes.js  style.css
frontend/src/: App.tsx  Castle.tsx  Today.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  Connector.tsx  HorizontalRule.tsx  Loading.tsx  Panel.tsx  ReadingTile.tsx  Separator.tsx  Textbox.tsx
frontend/src/components/Buttons/: Button.tsx  MoreLessButton.tsx  RefreshButton.tsx
frontend/src/features/GitHub/: GitHub.tsx
frontend/src/features/HackerNews/: HackerNews.tsx
frontend/src/features/LivingWorlds/: LivingWorlds.tsx
frontend/src/features/Lobsters/: Lobsters.tsx
frontend/src/features/PathOfExile/: CurrencyChip.tsx  LeagueChip.tsx  PathOfExile.tsx
frontend/src/hooks/: useAddressesConfig.ts  useConfig.ts  useFetch.ts  useGitHub.ts  useHackerNews.ts  useLobsters.ts  useLocalStorage.ts  useOpen.ts  usePathOfExile.ts
frontend/src/utils/: getUrlPrefix.ts  plural.ts
(+16 files in other folders)
