[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "json-repair>=0.46.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "ruff>=0.11.12",
]
